--- a/css/style.css
+++ b/css/style.css
@@ -334,9 +334,10 @@ img{
 /* ===================== HOME ================== */
 
 .home{
-    height: 90vh;
+    height: 70vh;
     align-content: space-between;
     margin-top: var(--mb-3);
+    padding-bottom: 0;
 }
 
 .home__container{
@@ -471,6 +472,7 @@ img{
 
 .home__scroll-mouse{
     font-size: var(--big-font-size);
+    margin-top: var(--mb-3);
 }
 
 .home__scroll-name{
@@ -484,3 +486,47 @@ img{
     font-size: var(--h3-font-size);
 }
 
+/* ===================== ABOUT ================== */
+.about{
+    padding-top: 1rem;
+}
+.about__img{
+    width: 200px;
+    border-radius: .5rem;
+    margin-bottom: var(--mb-2);
+    display: inline-flex;
+    justify-self: center;
+}
+
+.about__description{
+    text-align: center;
+    margin-bottom: var(--mb-2-5);
+}
+
+.about__info{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: var(--mb-2-5);
+}
+
+.about__info-title{
+    font-size: var(--h2-font-size);
+    font-weight: var(--font-semi-bold);
+    color: var(--title-color);
+}
+
+.about__info-name{
+    font-size: var(--smaller-font-size);
+    font-family: var(--roboto-font)
+}
+
+.about__info-name,
+.about__info-title{
+    display: block;
+    text-align: center;
+}
+
+.about__buttons{
+    display: flex;
+    justify-content: center;
+}
